--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Nick Jacob
 email: me@nickjacob.com
-description: "Engineer, coder. The kind of masochist who knows how to google."
+description: "when I close my eyes I see code"
 baseurl: ""
 url: "http://nickjacob.com"
 twitter_username: nickjacob
